# Re-Identification

./: .gitignore  README.md  custom_bytetrack.yaml  pyproject.toml
two_model/: debug_field_model.py  train_detector.py  train_segmenter.py  view_detector.py  view_segmenter.py  virtual_tracker.py
two_model/final_training_run/regularized_model/: args.yaml  results.csv
two_model/final_training_runs/detector_strong_generalization/: args.yaml  results.csv
