[project]
name = "cv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch==2.5.0+cu118 ; platform_system != 'Darwin'",
  "torchvision==0.20.0+cu118 ; platform_system != 'Darwin'",
  "torch==2.5.0 ; platform_system == 'Darwin'",
  "torchvision==0.20.0 ; platform_system == 'Darwin'",
  "ultralytics>=8.3.158",
  "numpy>=2.3.1",
  "scipy>=1.16.0",
  "deep-sort-realtime>=1.3.2",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'" },
]


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
